# Backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  solution.md
migrations/2024-08-09-210014_init/: up.sql
migrations/2024-09-10-203441_init/: up.sql
seeds/2024-09-10-215201_init/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/db/: db.rs
src/errors/: response.rs
src/routes/: events.rs  helper.rs  index.rs  mod.rs
tests/: example_integration_tests.rs
