[package]
name = "order-party"
description = "API for a ordering system."
version = "0.1.0"
edition = "2021"
authors = ["h0p3zZ <h0p3zZ@outlook.com>"]
readme = "README.md"
repository = "https://github.com/Bled-Co-Kg/OrderParty-Backend"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.2", features = ["sqlite"] }
rocket = { version = "0.5.0", default-features = false, features = ["json"] }
dotenvy = "0.15.7"
serde = "1.0.205"
okapi = "0.7.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
schemars = "0.8.21"